antlr-template/bin/main/Expression.g4
grammar Expression;

// Lexer
WS: [ \t\n\r]+ -> skip;

// Grammar
expr : expr '+' term| expr '-' term| term;
term : term '*' factor| term '/' factor| factor;
factor : exp '**' factor | exp; 
exp : '('expr')' | id;
id: 'A' | 'B' | 'C';
